# Pareto

./: .CLAUDE.md  .gitignore  CHANGELOG.md  CHART_ENHANCEMENT.md  CLAUDE.md  FIXED_DATABASE_SYNC.md  FULL_WORKFLOW_DIAGRAM.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  INTERACTION_EXAMPLE.txt  PROCESS_GRAPH_SPLIT.md  QUICK_START.md  README.md  SCENARIO_BENEFITS_SUMMARY.md  SCENARIO_OPTIMIZATION_DESIGN.md  SCENARIO_UI_MOCKUP.txt  SIMPLE_OPTIMIZATION_DESIGN.md  TWO_COLUMN_MOCKUP.txt  WARP.md  database.ddb.wal  debug_simulation_data.py  main.py  pyproject.toml  run_web.py
.claude/commands/: remove-debug.md  spot-duplicates.md  uat.md
ai/: llm_model.py  pareto_agent.py  prompts.py  toolbox.py
api/: config.py  urls.py
api/routers/: contracts.py  home.py  pricing.py  products.py
db/: calculation.py  crud.py  optimization_repository.py  pricing_repository.py  products_repository.py  schemas.py
db/migrations/: 20251017_tier_pricing.sql  20251019_rename_unit_range_to_tier_number.sql  20251019_rename_unit_range_to_tier_number_v2.sql  run_migration.py
examples/: contract_tier_example.py
frontend/: base.html
frontend/contracts/: index.html
frontend/contracts/components/: pricing-grid.html
frontend/contracts/js/: ProcessModal.js  contractsApp.js  dataService.js  formHandler.js  modalManager.js  (+8 more)
frontend/home/: index.html  index.html.backup
frontend/pricing/: index.html  processes.html
frontend/products/: ARCHITECTURE.md  UI_UX_GUIDE.md  index.html
frontend/util/: toast.js
scripts/: __init__.py  add_tier_column.py  check_schema.py  migrate_to_tier_pricing.py
(+44 files in other folders)
